# csum

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  submit.sh
csum/: __init__.py  graph.py  main.py  meta.py  queries.py  raplicator.py
experiments/: convertor.py  kg_call.py  rdf_queries.py
