[tool.poetry]
name = "csum"
version = "0.1.0"
description = "Conceptual Schema Summarization"
authors = ["mozzherina"]

[tool.poetry.dependencies]
python = "^3.8.5"
numpy = "1.19.5"
tensorflow = ">=2.4.0rc0"
ipython = "^7.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
